# cpprest_mwe

./: .gitignore  .gitmodules  Readme.md
boost_docker/: Dockerfile-Boost  Dockerfile-Boost-Debug  docker-compose-boost-debug.yml  docker-compose-boost.yml
dummy_server/: docker_log_mem_usage.ps1  docker_log_mem_usage.sh  dummy_server.py  logging.json  request.sh  run_example.py  setup_logging.py
dummy_server/input/: data.json
mwe_service/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile-Debug  Dockerfile-Valgrind  docker-compose-debug.yml  docker-compose-valgrind.yml  docker-compose.yml  mwe_service.props  mwe_service.sln  mwe_service.vcxproj  mwe_service.vcxproj.filters  run_module.sh  run_module_valgrind.sh
mwe_service/src/: Dockerfile-standalone  mwe_handler.h  mwe_server.cpp
